--- a/src/App.css
+++ b/src/App.css
@@ -22,8 +22,40 @@
   align-items: left;
   justify-content: left;
 }
-.header{
-  font-family:'Fuggles'; font-size:2.5em;
-  text-shadow:2px 2px 3px #000;
+.header{ 
+  font-family:'Fuggles'; font-size:2.5em;  text-shadow:2px 2px 3px #000;
+  position:relative; width:100%; 
+}
+.Logo{ height:0.8em; position:relative; top:8px; left:-5px; }
+
+.btnInfo{ height:2em; position:absolute; top:15px; right:15em; 
+  background:linear-gradient(180deg, #fff,#eec 50%,hsl(60deg 5% 36%) 100%);
+  border-radius:5px; border:none; padding:0 1em;
 }
 
+/* popup dialog (move to new file) */
+.popup-content{background:#282c34; border:3px solid #7771; border-radius:15px;
+  color:#eee; 
+  margin:auto; padding:0 1em; max-width:40em;
+}[role=tooltip]
+.popup-content{box-shadow:0 0 3px rgba(0,0,0,.16);border-radius:5px}
+.popup-overlay{background:rgba(0,0,0,.5)}[data-popup=tooltip]
+.popup-overlay{background:transparent}
+.popup-arrow{-webkit-filter:drop-shadow(0 -3px 3px rgba(0,0,0,.16)); filter:drop-shadow(0 -3px 3px rgba(0,0,0,.16));color:#fff;
+  stroke-width:1px;stroke:#d7d7d7;stroke-dasharray:30px; stroke-dashoffset:-54px;
+  left:0;right:0;top:0;bottom:0
+ }
+.modal{ font-size:1em; }
+.modal > .header { width: 100%;
+  border-bottom: 1px solid gray;
+  /* font-size: 1.5em; */
+  text-align: center;
+  /* padding: 5px; */
+}
+.modal > .content { width:auto; padding:0.5em 1em; }
+.modal > .actions {
+  width: 100%;
+  padding: 10px 5px;
+  margin: auto;
+  text-align: center;
+}
