--- a/src/App.css
+++ b/src/App.css
@@ -24,7 +24,7 @@
 }
 .header{ 
   font-family:'Fuggles'; font-size:2.5em;  text-shadow:2px 2px 3px #000;
-  position:relative; width:100%; 
+  position:relative; 
 }
 .Logo{ height:0.8em; position:relative; top:8px; left:-5px; }
 
