--- a/src/Fretboard.css
+++ b/src/Fretboard.css
@@ -80,8 +80,7 @@
 .btnStrgFltr6{  top:22px; }
 
 .fretButton{ 
-  color:#000; cursor:pointer;
-  border:none; border-radius:5px;  box-shadow:1px 1px 5px #0007;
+  color:#000; border:none; border-radius:5px;  box-shadow:1px 1px 5px #0007;
   text-align:left; margin:0; padding-left:10px;
   position:absolute; top:5px; left:15px; height:2em; width:4.5em;
   z-index:100;
