--- a/src/Fretboard.css
+++ b/src/Fretboard.css
@@ -45,7 +45,8 @@
 .infoDiv{ display:inline-table; margin:5px 0 0 0.5em; text-shadow:1px 1px 3px #000;}
 .infoDiv .propName{ font-weight:bold; margin:0 0 0 0.5em;}
 .infoDiv .propName:first-child{ margin:0;}
-.infoDiv .ivl{ font-weight:normal; }
+.infoDiv .ivl{ cursor:pointer; font-weight:normal; }
+.infoDiv .ivl[data-selected="noteFilter"] { background:#aaf; border-radius: 3px; }  /* note in props.noteFilter */
 .infoDiv .ivl sub{ font-size:0.6em; position:relative; left:-3px; }
 .qryBtnExpand{ display:inline-table; position:sticky; height:1em; width:1em; }
 .qryBtnExpand div{ position:relative; transform:rotateZ(90deg); height:1em; left:3px; top:2px;
@@ -82,12 +83,13 @@
   position:absolute; top:5px; left:15px; height:2em; width:4.5em;
   z-index:100;
 }
-/* .fretButton span{ cursor:alias; } */
-.fretButton[data-tag="0"] { background:linear-gradient(180deg, #fff,#eec 50%,hsl(60deg 5% 36%) 100%); }
-.fretButton[data-tag="1"] { background:#baac; }
-.fret0 .fretButton { left:39px; }
+.fretButton{ background:linear-gradient(180deg, #fff,#eec 50%,hsl(60deg 5% 36%) 100%); }
 .fretButton[data-selected="fretRoot"] { border: 1px #04ff00 solid; }
 .fretButton[data-selected="selNote"] { border: 1px #fffb00 solid;  }
+/* .fretButton[data-selected="0"] {} */
+.fretButton[data-selected="1"] { background:#867171; }
+.fretButton[data-selected="noteFilter"] { background:#aaf; }  /* note found in props.noteFilter */
+.fret0 .fretButton { left:39px; }
 .fretButton sup{ color:#0f000fa0; font-size:0.7em; position:absolute; top:0px; text-shadow:none;  }
 .fretButton sub{ color:#00000050; text-shadow:none; position:relative; }
 .fretButton .subInterval{ cursor:alias; top:0px; right:-10px; }
