--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 /*
   App.css
-  - by Chris DeFreitas, chrisd@europa.com
+  - by Chris DeFreitas, ChrisDeFreitas777@gmail.com
   - top level application styles for GuitrJoe app
   
 */
