--- a/src/Bgnd.css
+++ b/src/Bgnd.css
@@ -1,8 +1,6 @@
 /*
-  Bgnd.js
-  - ???
-  - part of GuitarJoe App
-  - Chris DeFreitas, chrisd@europa.com  created:Aug 2021
+  Bgnd.css
+  - not used
 
 */
 
