--- a/src/FretPnl.css
+++ b/src/FretPnl.css
@@ -1,6 +1,6 @@
 /*
  FretPnl.css
-  - by Chris DeFreitas, chrisd@europa.com
+  - by Chris DeFreitas, ChrisDeFreitas777@gmail.com
   - styles to manage construction of Fretboard frets and strings etc
 */
 
