--- a/src/Fretboard.css
+++ b/src/Fretboard.css
@@ -1,6 +1,6 @@
 /*
   Fretboard.css
-  - by Chris DeFreitas, chrisd@europa.com
+  - by Chris DeFreitas, ChrisDeFreitas777@gmail.com
   - styles for Fretboard and QueryPnl
   
 */
