--- a/src/Fretboard.css
+++ b/src/Fretboard.css
@@ -64,6 +64,7 @@
 .infoDiv .ivl:hover{ background:#7f77;  }
 .infoDiv .ivl[data-selected="noteFilter"] { background:#aaf; border-radius:3px; }  /* note in props.noteFilter */
 .infoDiv .ivl[data-selected="fretSelectMatch"] { background:#b1e6ff7a; border-radius:3px; }  /* user selected matching chord or scale */
+.infoDiv .ivl[data-selected="invr"]{ background-color:#e7e; }  
 .infoDiv .ivl sub{ font-size:0.6em; position:relative; left:-3px; top:-3px; }
 .qryBtnExpand{ display:inline-table; position:sticky; height:1em; width:1em; }
 .qryBtnExpand div{ position:relative; transform:rotateZ(90deg); height:1em; left:3px; top:2px;
@@ -93,42 +94,3 @@
 .btnStrgFltr4{  top:22px; }
 .btnStrgFltr5{  top:22px; }
 .btnStrgFltr6{  top:22px; }
-
-.fretButton{ 
-  color:#000; border:none; border-radius:5px;  box-shadow:1px 1px 5px #0007;
-  text-align:left; margin:0; padding-left:10px;
-  position:absolute; top:5px; left:15px; height:2em; width:4.5em;
-  z-index:100;
-}
-.fretButton{ background:linear-gradient(180deg, #fff,#eec 50%,hsl(60deg 5% 36%) 100%); }
-.fretButton[data-state="fretRoot"] { border: 1px #04ff00 solid; } /* green */
-.fretButton[data-state="selNote"] { border: 1px #fffb00 solid;  } /* yellow */
-.fretButton[data-state="fretSelect"] { border: 1px #00afff solid;  }  /* azure radiance */
-.fretButton[data-state="fretSelectMatch"] { background:#b1e6ff; }  /* Anakiwa */
-.fretButton[data-state="noteFilter"] { background:#aaf; }  /* Melrose */
-.fretButton[data-state="interval"] { background:#ffff9b; }  /*  pale yellow */
-.fretButton[data-state="chord"] { background:#ffc06f;; }  /*  pale orange */
-/* .fretButton[data-selected="0"] {} */
-.fretButton[data-selected="1"] { background:#3ac664; }  /* emerald */
-.fret0 .fretButton { left:39px; }
-.fretButton sup{ color:#0f000fa0; font-size:0.7em; position:absolute; top:0px; text-shadow:none;  }
-.fretButton sub{ color:#00000050; text-shadow:none; position:relative; }
-.fretButton .subInterval{ cursor:alias; top:0px; right:-10px; }
-.fretButton .spanNote .subOctave{ color:#0008; font-size:0.6em; }
-.fretButton .spanIvl span{ color:#0007; font-size:0.7em; }
-.fretButton .subNote{ cursor:alias; top:0px; right:-10px; }
-/* .fretButton .subNote .subOctave{ color:red; } */
-.strg2 .fretButton,
-.strg3 .fretButton,
-.strg4 .fretButton{ top:calc( 1em + 6px) }
-.strg5 .fretButton,
-.strg6 .fretButton{ top:calc( 1em + 7px) }
-
-/* .fretButton[data-ivl="P1"],  */
-/* .fretButton[data-ivl="P1"] sub, */
-.fretButton[data-ivl="P1"] sup{ color: #fff; text-shadow:1px 1px 1px #441616; }
-.fretButton[data-ivl="m3"] .supInterval,
-.fretButton[data-ivl="M3"] .supInterval{ color: #fff; text-shadow:1px 1px 1px #000; }
-.fretButton[data-ivl="P5"] .supInterval{ color: #fff; text-shadow:1px 1px 1px #000; }
-.fretButton[data-ivl="m7"] .supInterval,
-.fretButton[data-ivl="M7"] .supInterval{ color: #fff; text-shadow:1px 1px 1px #000;  }
