--- a/src/Dialog.css
+++ b/src/Dialog.css
@@ -8,27 +8,20 @@
 .popup-content{background:#282c34; border:3px solid #7771; border-radius:15px;
   color:#fff; 
   margin:auto; padding:0 1em; max-width:40em;
-}[role=tooltip]
-.popup-content{box-shadow:0 0 3px rgba(0,0,0,.16);border-radius:5px}
-.popup-overlay{background:rgba(0,0,0,.5)}[data-popup=tooltip]
-.popup-overlay{background:transparent}
-.popup-arrow{-webkit-filter:drop-shadow(0 -3px 3px rgba(0,0,0,.16)); filter:drop-shadow(0 -3px 3px rgba(0,0,0,.16));color:#fff;
+}
+[role=tooltip].popup-content{ box-shadow:0 0 3px rgba(0,0,0,.16);border-radius:5px }
+.popup-overlay{background:rgba(0,0,0,.5); }
+[data-popup=tooltip].popup-overlay{ background:transparent; }
+.popup-arrow{
+  -webkit-filter:drop-shadow(0 -3px 3px rgba(0,0,0,.16)); filter:drop-shadow(0 -3px 3px rgba(0,0,0,.16));
   stroke-width:1px;stroke:#d7d7d7;stroke-dasharray:30px; stroke-dashoffset:-54px;
-  left:0;right:0;top:0;bottom:0
+  color:#fff; left:0;right:0;top:0;bottom:0
  }
 
- /* modal dialog */
-.modal{ font-size:0.9em; }
-.modal > .header { width: 100%;
-  border-bottom: 1px solid gray;
-  /* font-size: 1.5em; */
-  text-align: center;
-  /* padding: 5px; */
-}
-.modal > .content { width:auto; padding:0.5em 1em; }
-.modal > .actions {
-  width: 100%;
-  padding: 10px 5px;
-  margin: auto;
-  text-align: center;
-}
+ /* modal dialog - modified for AboutDlg */
+.modal{ font-size:0.9em; height:70vh; }
+.modal  .header { text-align:center; width:100%; height:2em; }
+.modal  .content { height:calc( 100% - 10em ); width:auto; overflow-y:auto; padding:0.5em 2em; }
+.modal  .actions { height:2em;  width:100%;  padding:10px 5px; margin:auto; text-align:center; }
+
+.hrLine{ padding:0; border-top:0; position:relative; top:-0.25em; width:80%; }
