--- a/src/Fretboard.css
+++ b/src/Fretboard.css
@@ -5,18 +5,31 @@
   
 */
 
-.fretboard{ display:inline-table;  margin:0 auto 0 auto; position:relative; }
+.fretboard{ display:inline-block;  margin:0 auto 0 auto; position:relative; }
 .fretboard[id="Fretboard0"]{ margin:1em auto 0 auto;}
 
 .queryPnl{ color:#ffffffd0; border:none; outline:none; padding:0;
   position:relative; margin:0 auto; text-align:center; top:-0.25em;
 }
-.queryControls{ background-color:hsl(177deg 68% 31% / 92%); display:inline-table; position:relative; 
-  border: 1px solid #333; border-radius:5px; box-shadow:5px 5px 15px 1px #0000007a;
-  margin:0; padding:0 0.5em 0.5em 0.5em;
-  height:3em; width:100%; top:0px;
+
+.tbQuery{ 
+  border:0; border-collapse:separate; border-spacing:0px; table-layout:fixed;
+  padding:0; margin:0 auto; position:relative; width:auto; max-width:70%;
 }
-.dataPnl { border:none; display:inline-table; padding:0 0.5em; text-align:center;  }
+.tbQuery tr td{ vertical-align:top; }
+.tdQryContent{ padding:0; width:70%; } 
+
+
+.queryControls{ 
+  background-color:hsl(177deg 68% 31% / 92%); 
+  border:1px solid #333;  border-radius:5px; box-shadow:5px 5px 15px 1px #0000007a;
+  display:inline-block; height:3.5em; margin:0; overflow:hidden; padding:0; width:100%; 
+  position:relative; 
+}
+.queryPnlHide .queryControls,
+.queryControls[data-roottype='fretSelect']{ display:none; }
+
+.dataPnl { border:none; display:inline-block; padding:0 0.5em; text-align:center;  }
 .dataPnl label{ color:#ffffffd0; font-weight:bold; font-size:1em; text-shadow:1px 1px 5px #00000090; }
 .dataPnl label[data-selected="true"]{ cursor:pointer; }
 .dataPnl select{ background-color:#ffffffa0; border:none; border-radius:3px; cursor:pointer;
@@ -28,43 +41,32 @@
 .dataPnl select[data-state="interval"]{ background-color:#ffff9b; }
 .dataPnl select[data-state="chord"]{ background-color:#eab555; }
 
-
+.tdQryBtnsLeft{ padding:0.5em 0.25em 0 0; text-align:right; width:8em; } 
+.tdQryBtnsRight{ padding:0.5em 0 0 0.5em; text-align:left; width:12em; } 
+.queryPnlHide .tdQryBtnsLeft,
+.queryPnlHide .tdQryBtnsRight{ padding-top:0; }
 
 .qryBtn{ background-color:hsl(177deg 68% 31% / 92%); border-radius:5px; 
   box-shadow: 5px 5px 15px 1px #0000007a; color:#000; cursor:pointer; 
-  display:inline-table; margin:0 0.25em;
+  display:inline-block; margin:0 0.25em;
   font-weight:normal; text-shadow:1px 1px 1px #fff6; text-align:center;
   font-size:1.25em; padding:2px 5px;
  }
 .qryBtnSmall{
   background-color:hsl(177deg 68% 31% / 92%); border-radius:5px; 
   box-shadow: 5px 5px 15px 1px #0000007a; color:#000; cursor:pointer; 
-  display:inline-table; margin:0 0.25em; 
+  display:inline-block; margin:0 0.25em; 
   font-weight:normal; text-shadow:1px 1px 1px #fff6; text-align:center;
   font-size:1em; padding:3px 3px;
 }
 
-.queryPnlHide .queryControls,
-.queryControls[data-roottype='fretSelect']{ display:none; }
 
-.tbQuery{ 
-  border:0; border-collapse:separate; border-spacing:0px; table-layout:fixed;
-  padding:0; margin:0 auto; position:relative; width:auto; max-width:70%;
-}
-.tbQuery tr td{ vertical-align:top; }
-.qryContent{ padding:0; width:70%; } 
-.qryBtnsLeft{ padding:0.5em 0.25em 0 0; text-align:right; width:8em; } 
-.qryBtnsRight{ padding:0.5em 0 0 1.5em; text-align:left; width:12em; } 
-.queryPnlHide .qryBtnsLeft,
-.queryPnlHide .qryBtnsRight{ padding-top:0; }
-
-
-.infoPnl{ margin:0 auto; width:100%; } 
+.infoPnl{ background:#00000045; border-radius:5px; margin:0 auto; width:98%; } 
 .queryPnlShow .infoPnl{ display:block; margin:0 auto; }
-.queryPnlHide .infoPnl{ display:inline-table; }
-.infoDiv{ background:#00000045; border-radius:5px; display:inline-table;
+.queryPnlHide .infoPnl{ display:inline-block; }
+.infoDiv{ display:inline-block;
    padding:0; margin:0 auto; text-shadow:1px 1px 3px #000; width:100%; 
-   position:relative; left:12px; }
+ }
 .infoDiv .propName{ color:white; cursor:pointer; font-weight:bold; margin:0 0 0 0.5em; }
 .infoDiv .lineBreak{ line-height:5%; }
 .infoDiv .propName:first-child{ margin:0; }
@@ -76,9 +78,8 @@
 .infoDiv .ivl[data-selected="triad"]{ background-color:#0cc; }  
 .infoDiv .ivl sub{ font-size:0.6em; position:relative; left:-3px; top:-3px; }
 
-.btnFilter{ position:absolute; width:20px;
-  cursor:pointer; 
-  /* background-color:transparent; border:0; outline:0;  */
+
+.btnFilter{ position:absolute; width:20px;  cursor:pointer; 
   height:2em; width:48%; margin:0;
   background:linear-gradient(-25deg, #fff,#eec 50%,#bba 100%);
   border:2px outset #ffffff90;  border-radius:5px; box-shadow:-2px -2px 5px #00000080;
