--- a/src/Dialog.css
+++ b/src/Dialog.css
@@ -20,8 +20,11 @@
 
  /* modal dialog - modified for AboutDlg */
 .modal{ font-size:0.9em; height:70vh; }
-.modal  .header { text-align:center; width:100%; height:2em; }
-.modal  .content { height:calc( 100% - 10em ); width:auto; overflow-y:auto; padding:0.5em 2em; }
+.modal  .header { text-align:center; width:100%; height:1.5em; }
+.modal  .content { height:calc( 100% - 10em ); width:auto; overflow-y:auto; padding:0 2em 0.5em 2em; }
 .modal  .actions { height:2em;  width:100%;  padding:10px 5px; margin:auto; text-align:center; }
+.modal h3 { font-size:1.1em; font-weight:normal; margin-bottom:0.3em;}
+.modal h3:first-child { margin-top:0;}
 
-.hrLine{ padding:0; border-top:0; position:relative; top:-0.25em; width:80%; }
+.hdVer{ font-size:0.5em; display:inline-block; margin-left:0.5em; }
+.hrLine{ margin:0 auto; padding:0; border-top:0; position:relative; top:-0.25em; width:80%; }
