--- a/src/Fretboard.css
+++ b/src/Fretboard.css
@@ -70,6 +70,7 @@
 .infoDiv .propName{ color:white; cursor:pointer; font-weight:bold; margin:0 0 0 0.5em; }
 .infoDiv .lineBreak{ line-height:5%; }
 .infoDiv .propName:first-child{ margin:0; }
+.infoDiv .propName[data-selected="note"]{ display:block; font-size:0.8em; font-weight:normal; font-style:italic; }
 .infoDiv .ivl{ border-radius:3px; cursor:pointer; font-weight:normal; }
 .infoDiv .ivl:hover{ background:#7f77;  }
 .infoDiv .ivl[data-selected="noteFilter"] { background:#aaf; border-radius:3px; }  /* note in props.noteFilter */
@@ -79,26 +80,3 @@
 .infoDiv .ivl[data-selected="chordShape"]{ background-color:#f1601e; }  
 .infoDiv .ivl sub{ font-size:0.6em; position:relative; left:-3px; top:-3px; }
 
-
-.btnFilter{ position:absolute; width:20px;  cursor:pointer; 
-  height:2em; width:48%; margin:0;
-  background:linear-gradient(-25deg, #fff,#eec 50%,#bba 100%);
-  border:2px outset #ffffff90;  border-radius:5px; box-shadow:-2px -2px 5px #00000080;
-}
-.btnFilter div{ color:#177d7f; background:transparent; border:none; outline:0;
-  font-size:2.5em; position:relative;  left:-2px; top:-14px;
-}
-.btnFretFilter{ width:80%; margin:0 auto; }
-
-.btnStrgFltr{
-   /* background:linear-gradient(-90deg, #fff,#eec 50%,#bba 100%); */
-  background:transparent; border:none; outline:0; box-shadow:none;
-  top:6px; left:0px; height:24px; width:25px; z-index:100;
-  transform: rotateZ(90deg);
-}
-.btnStrgFltr img{ position:relative; height:10px; top:0px; left:0px; }
-.btnStrgFltr2{  top:22px; }
-.btnStrgFltr3{  top:22px; }
-.btnStrgFltr4{  top:22px; }
-.btnStrgFltr5{  top:22px; }
-.btnStrgFltr6{  top:22px; }
