--- a/src/controls/HelpManager.sass
+++ b/src/controls/HelpManager.sass
@@ -17,9 +17,12 @@
   font-size: 0.8em
   margin: 0 auto
   padding: 0.5em 1.5em 0.5em 2em
+  // position: relative
   text-align: left
   width: 40em
   height: 0px   // expanded with framer-motion
+  // max-height: 40em
+  min-height: 40em
   overflow-y: hidden
 
   .menuFrame   // top breadcrumb menu
@@ -52,7 +55,8 @@
     font-size: 1em
     padding: 0 1em
     height: auto
-    max-height: 35em
+    // line-height: 1.4em
+    max-height: 30em
     overflow-y: auto
     p       // format markdown
       margin: 0.8em 0 0.5em 0
