--- a/src/controls/HelpManager.sass
+++ b/src/controls/HelpManager.sass
@@ -17,13 +17,12 @@
   font-size: 0.8em
   margin: 0 auto
   padding: 0.5em 1.5em 0.5em 2em
-  // position: relative
+  position: relative
   text-align: left
   width: 40em
-  height: 0px   // expanded with framer-motion
-  // max-height: 40em
-  min-height: 40em
   overflow-y: hidden
+  height: 0px   // expanded with framer-motion
+  opacity: 0    // changed with framer-motion
 
   .menuFrame   // top breadcrumb menu
     font-size: 0.8em
@@ -54,8 +53,8 @@
   .contentFrame  // help markdown text: topic.content
     font-size: 1em
     padding: 0 1em
-    height: auto
-    // line-height: 1.4em
+    // height: auto
+    height: 30em
     max-height: 30em
     overflow-y: auto
     p       // format markdown
@@ -66,8 +65,8 @@
 
   .relatedFrame  // related topics: topic.related
     font-size: 1.2em
-    padding: 1em 0 1em 1em
-    
+    padding: 1em 0 0.5em 1em
+
     .caption
       color: #333
       font-style: italic
