--- a/src/FretPnl.css
+++ b/src/FretPnl.css
@@ -12,7 +12,7 @@
   border:0;
 }
 .fretPnl tr td{   /* default cells */
-  background-color:#3d3b4fff; border:0; padding:0; 
+  background-color:#3d3b4fff; border:0; cursor:pointer; padding:0; 
   height:2em; max-height:2em; width:5em; min-width:5em; position:relative;
 }
 .fretPnl .strg .fret{ cursor:pointer; position:relative; }   /* all fret cells */
@@ -56,7 +56,7 @@
 .fretPnl tr .borderRight,
 .fretPnl .frame .borderBottom,
 .fretPnl .frame .borderRight{      /* format right border  */
-  background-color:transparent; width:0.5em;  min-width:0.5em;
+  background-color:transparent; cursor:default; width:0.5em;  min-width:0.5em;
 }
 .fretPnl .borderBottom .borderRight{
   border-bottom:0;
@@ -66,15 +66,11 @@
 }
 
 .fretPnl .strg1 td{ height:1em;  }    /*  height of top/bottom edge  */
-.fretPnl .borderBottom td{ cursor:pointer; height:1.25em; }
+.fretPnl .borderBottom td{ height:1.25em; }
 
 .fretPnl .frame td{    /* format td's in frame and border rows */
-  background-color:transparent; cursor:pointer; 
-  color:#ffffff80;
-  font-size:1em;
-  /* text-shadow:1px 1px 5px #0008; */
-  text-align:center;
-  height:0.5em;
+  background-color:transparent; cursor:pointer; color:#ffffff80; 
+  font-size:1em; text-align:center; height:0.5em;
 }
 .fretPnl .frameBottom .tdBottom{ cursor:default; position:relative; }
 
