--- a/src/Fretboard.css
+++ b/src/Fretboard.css
@@ -32,7 +32,7 @@
 .dataPnl { border:none; display:inline-block; padding:0 0.5em 0.5em 0.5em; text-align:center;  }
 .dataPnl label{ color:#ffffffd0; font-weight:bold; font-size:1em; text-shadow:1px 1px 5px #00000090; }
 .dataPnl label[data-selected="true"]{ cursor:pointer; }
-.dataPnl select{ background-color:#ffffffa0; border:none; border-radius:3px; cursor:pointer;
+.dataPnl select{ background-color:#ffffffa0; border:none; border-radius:3px; color:#444; cursor:pointer;
   display:block; margin:0 auto; padding:5px 0;
   min-width:5em;  max-width:10em; 
   outline:0;  text-align-last:center;
