--- a/src/Fretboard.css
+++ b/src/Fretboard.css
@@ -20,18 +20,20 @@
 .tdQryContent{ padding:0; width:70%; } 
 
 
-.queryControls{ 
+.queryBar{ 
   background-color:hsl(177deg 68% 31% / 92%); 
-  border:1px solid #333;  border-radius:5px; box-shadow:5px 5px 15px 1px #0000007a;
+  /* border:1px solid #333;   */
+  border:none;
+  border-radius:5px; box-shadow:5px 5px 15px 1px #0000007a;
   display:block; height:3.5em; margin:0; overflow:hidden; padding:0; width:100%; 
   position:relative; 
 }
-/* .queryPnlHide .queryControls, */
-.queryControls[data-roottype='fretSelect']{ display:none; }
+/* .queryPnlHide .queryBar, */
+.queryBar[data-roottype='fretSelect']{ display:none; }
 
 .dataPnl { border:none; display:inline-block; padding:0 0.5em 0.5em 0.5em; text-align:center;  }
 .dataPnl label{ color:#ffffffd0; font-weight:bold; font-size:1em; text-shadow:1px 1px 5px #00000090; }
-.dataPnl label[data-selected="true"]{ cursor:pointer; }
+.dataPnl label[data-loaded="true"]{ cursor:pointer; }
 .dataPnl select{ background-color:#ffffffa0; border:none; border-radius:3px; color:#444; cursor:pointer;
   display:block; margin:0 auto; padding:5px 0;
   min-width:5em;  max-width:10em; 
