--- a/src/Fretboard.css
+++ b/src/Fretboard.css
@@ -29,7 +29,7 @@
   position:relative; 
 }
 /* .queryPnlHide .queryBar, */
-.queryBar[data-roottype='fretSelect']{ display:none; }
+.queryBar[data-mode='fretSelect']{ display:none; }
 
 .dataPnl { border:none; display:inline-block; padding:0 0.5em 0.5em 0.5em; text-align:center;  }
 .dataPnl label{ color:#ffffffd0; font-weight:bold; font-size:1em; text-shadow:1px 1px 5px #00000090; }
